objects/MMPJ_XRM_Marques_cooperatives__c.object
<CustomObject>
    <description>MMPJ XRM Project - manage brands owned by cooperative companies</description>
    <fields>
        <fullName>MMPJ_XRM_Cooperative__c</fullName>
        <label>Coopérative</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Liste des marques</relationshipLabel>
        <relationshipName>Marques_cooperatives</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_site_internet__c</fullName>
        <label>Site internet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_volume__c</fullName>
        <label>Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Marque coopérative</label>
    <nameField>
        <label>Marque</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marques coopératives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>